[package]
name = "add_pieces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
vc-processors = { version = "0.1.9", default-features = false, features = ["builtin"] }
time = "0.3"
crossterm = "0.20"

[patch.crates-io]
filecoin-hashers = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-hashers", rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
filecoin-proofs = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "filecoin-proofs" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
fr32 = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "fr32" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
sha2raw = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "sha2raw" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
storage-proofs-core = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-core" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
storage-proofs-porep = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-porep" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
storage-proofs-post = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-post" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
storage-proofs-update = { git = "https://github.com/ipfs-force-community/rust-fil-proofs", package = "storage-proofs-update" , rev = "669db598519c4975c4bc9013ba1cfaaf66dedcf3"}
